tests/invalid/invalid_unqualified_import.ri
import std/fs.{ Path }; // ok
import std/process.*; // ok
import std/dynlib.; // fail

func main() {}
